@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020140117"
-#define public MagickPackageReleaseDate "snapshot-20140117"
+#define public MagickPackageVersionAddendum ".020150118"
+#define public MagickPackageReleaseDate "snapshot-20150118"
