@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2015-01-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/cineon.c (ReadCINEONImage): Don't trust file header so
+much.  Resolves Coverity CIDs 10079, 10310, 10325.</li>
+<li>coders/art.c (ReadARTImage): Fix signed vs unsigned comparison
+caused by earlier changes.</li>
+</ul>
+</blockquote>
 <p>2014-01-17 Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;seznam&#46;cz">JaFojtik<span>&#64;</span>seznam<span>&#46;</span>cz</a>&gt;</p>
 <blockquote>
 <ul class="simple">
