@@ -1,3 +1,11 @@
+2015-01-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/cineon.c (ReadCINEONImage): Don't trust file header so
+	much.  Resolves Coverity CIDs 10079, 10310, 10325.
+
+	* coders/art.c (ReadARTImage): Fix signed vs unsigned comparison
+	caused by earlier changes.
+
 2014-01-17 Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/wpg.c Do not execute wpg raster read in ping mode.
